 MDEV-25870 Windows - fix ARM64 cross-compilation